test/Fail/MissingDefinitionData.err
MissingDefinitionData.agda:3.1-4.15: error: [MissingDefinitions]
The following names are declared but not accompanied by a
definition: T, U
